# ChangeLog for app-admin/chkrootkit
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/chkrootkit/Attic/ChangeLog,v 1.1 2002/07/18 22:57:53 drobbins Exp $

*chkrootkit-0.36 (18 Jul 2002)

  18 Jul 2002; Daniel Robbins <drobbins@gentoo.org>: Added missing ChangeLog