@@ -1,17 +1,18 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/app-admin/chkrootkit/Attic/chkrootkit-0.36.ebuild,v 1.3 2002/07/17 20:43:16 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/chkrootkit/Attic/chkrootkit-0.36.ebuild,v 1.4 2002/07/29 04:14:14 cselkirk Exp $
 
 S=${WORKDIR}/${PN}-pre-${PV}
 DESCRIPTION="chkrootkit is a tool to locally check for signs of a rootkit."
 SRC_URI="ftp://ftp.pangeia.com.br/pub/seg/pac/${P}.tar.gz"
 SLOT="0"
 HOMEPAGE="http://www.chkrootkit.org/"
-KEYWORDS="x86"
+KEYWORDS="x86 ppc"
 LICENSE="AMS"
 SLOT="0"
 
 DEPEND="virtual/glibc"
+RDEPEND="${DEPEND}"
 
 src_compile() {
 	make sense
