@@ -1,7 +1,11 @@
 # ChangeLog for app-admin/chkrootkit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/chkrootkit/Attic/ChangeLog,v 1.1 2002/07/18 22:57:53 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/chkrootkit/Attic/ChangeLog,v 1.2 2002/07/29 04:14:14 cselkirk Exp $
 
 *chkrootkit-0.36 (18 Jul 2002)
+  
+  29 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> chkrootkit-0.36.ebuild :
+
+  Added ppc KEYWORDS. Added RDEPEND.
 
   18 Jul 2002; Daniel Robbins <drobbins@gentoo.org>: Added missing ChangeLog
